--- a/Caddyfile
+++ b/Caddyfile
@@ -4,11 +4,11 @@
 
 # Explicitly handle both http and https to prevent redirect loops behind proxies like Cloudflare
 http://{$SITE_ADDRESS:localhost}, https://{$SITE_ADDRESS:localhost} {
-    handle /cv-forge* {
-        reverse_proxy cv-forge-frontend:80
-    }
+    # Default response for the main domain (or other subdomains pointed here)
+    respond "The Velez Lab Gateway is active." 200
+}
 
-    handle {
-        respond "The Velez Lab Gateway is active." 200
-    }
+# Subdomain for CV Forge
+cv-forge.thevelezlab.com {
+    reverse_proxy cv-forge-frontend:80
 }
