--- a/Caddyfile
+++ b/Caddyfile
@@ -1,4 +1,4 @@
-{
+
     # Global options
 }
 
@@ -10,5 +10,6 @@ http://{$SITE_ADDRESS:localhost}, https://{$SITE_ADDRESS:localhost} {
 
 # Subdomain for CV Forge
 cv-forge.thevelezlab.com {
+    rewrite * /cv-forge{uri}
     reverse_proxy cv-forge-frontend:80
 }
